Set composer "sort-packages" config

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
         "php": ">=7.0",
         "nette/application": "^2.4",
         "nette/di": "^2.4"
+    },
+    "config": {
+        "sort-packages": true
     }
 }
