--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
         "php": ">=7.1",
         "nette/application": "^3.0",
         "nette/di": "^3.0"
+    },
+    "config": {
+        "sort-packages": true
     }
 }
